--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Salmon Cookies</h1>
+        <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="salmon">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="sales.html">Sales</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
     <script src="js/apps.js"></script>
 </body>
 </html>
