--- a/sales.html
+++ b/sales.html
@@ -26,7 +26,7 @@
        <div id="cookies"></div>
     </main>
     <footer></footer>
-    <script src="js/app.js"></script>
+    <script src="js/apps.js"></script>
 </body>
 
 </html>
