--- a/sales.html
+++ b/sales.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Salmon Cookies</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="sales.html">Sales</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+    
     <div id="cookies">
-        <table></table>
+        
     </div>
     </main>
     <footer></footer>
