--- a/index.html
+++ b/index.html
@@ -22,8 +22,64 @@
             </ul>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section>
+            <p>We Asure You, This Is The Place To Make Your Family Happy!</p>
+            <img src="images/family.jpg" alt="family">
+        </section>
+        <div>
+            <p>Things You Can Find In Our Shops!</p>
+      
+      <img src="images/chinook.jpg" alt="chinook">
+      <img src="images/cutter.jpeg" alt="cutter">
+      <img src="images/fish.jpg" alt="fish">
+      <img src="images/frosted-cookie.jpg" alt="cookie">
+      <img src="images/shirt.jpg" alt="shirt">
+    </div>
+    <div>
+        <ul>
+            <li>Seattle Branch</li>
+            <li>Seattle, Washington, USA</li>
+            <li>phone: 0791237982</li>
+            <li>Hours Open: 8:00Am-8:00Pm</li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Tokyo Branch</li>
+            <li>Nakano City, Tokyo, Japan</li>
+            <li>phone: 0791236754</li>
+            <li>Hours Open: 6:00Am-9:00Pm</li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Dubai Branch</li>
+            <li>International City, Dubai, United Arab Emirates</li>
+            <li>phone: 0774986203</li>
+            <li>Hours Open: 8:00Am-12:00Am</li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Paris Branch</li>
+            <li>Near Eiffel Tower, Paris, France</li>
+            <li>phone: 1387264408</li>
+            <li>Hours Open: 10:00Am-12:00Am</li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Lima Branch</li>
+            <li>Chorrillos, Lima, Peru</li>
+            <li>phone: 0214789654</li>
+            <li>Hours Open: 9:00Am-6:00Pm</li>
+        </ul>
+    </div>
+    </main>
+    <footer>
+        
+    </footer>
 
     <script src="js/apps.js"></script>
 
