--- a/sales.html
+++ b/sales.html
@@ -24,7 +24,27 @@
     </nav>
 </header>
     <main>
-    
+    <form  id="newCookieStand">
+    <fieldset>
+        <legend>Adding a New Branch</legend>
+
+        <label for="place"> Branch Name</label>
+        <input id="place" name="place" type="text" placeholder="Enter a Place Name"/>
+
+        <label for="minCust"> Minimum Hourly Customers</label>
+        <input id="minCust" name="minCust" type="number"/>
+
+        <label for="maxCust"> Maximum Hourly Customers</label>
+        <input id="maxCust" name="maxCust" type="number"/>
+
+        <label for="avgSale"> Average Cookies Per Customer</label>
+        <input id="avgSale" name="avgSale" type="number"/>
+
+        <!-- <input type="submit" value="submit"/> -->
+        <button type="submit">Add Branch</button>
+
+    </fieldset>
+</form>
     <div id="cookies">    
         
     </div>
